--- a/themes/hello-friend-ng-fork/assets/scss/_logo.scss
+++ b/themes/hello-friend-ng-fork/assets/scss/_logo.scss
@@ -16,14 +16,14 @@
 
   &__text {
     font-size: 1rem;
-    color: red;
+    color: #ff1414;
   }
 
   &__cursor {
     display: inline-block;
     width: 10px;
     height: 1rem;
-    background: red;
+    background: #ff1414;
     margin-left: 5px;
     border-radius: 1px;
     animation: cursor 1s infinite;
