--- a/themes/hello-friend-ng-fork/assets/scss/_fonts.scss
+++ b/themes/hello-friend-ng-fork/assets/scss/_fonts.scss
@@ -110,6 +110,7 @@
 // Source Code Pro ------
 @font-face{
   font-family: 'Source Code Pro';
+  font-display: auto;
   font-weight: 200;
   font-style: normal;
   font-stretch: normal;
@@ -121,6 +122,7 @@
 
 @font-face{
   font-family: 'Source Code Pro';
+  font-display: auto;
   font-weight: 200;
   font-style: italic;
   font-stretch: normal;
@@ -132,6 +134,7 @@
 
 @font-face{
   font-family: 'Source Code Pro';
+  font-display: auto;
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
@@ -143,6 +146,7 @@
 
 @font-face{
   font-family: 'Source Code Pro';
+  font-display: auto;
   font-weight: 300;
   font-style: italic;
   font-stretch: normal;
@@ -154,6 +158,7 @@
 
 @font-face{
   font-family: 'Source Code Pro';
+  font-display: auto;
   font-weight: 400;
   font-style: normal;
   font-stretch: normal;
@@ -165,6 +170,7 @@
 
 @font-face{
   font-family: 'Source Code Pro';
+  font-display: auto;
   font-weight: 400;
   font-style: italic;
   font-stretch: normal;
@@ -176,6 +182,7 @@
 
 @font-face{
   font-family: 'Source Code Pro';
+  font-display: auto;
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
@@ -187,6 +194,7 @@
 
 @font-face{
   font-family: 'Source Code Pro';
+  font-display: auto;
   font-weight: 500;
   font-style: italic;
   font-stretch: normal;
@@ -198,6 +206,7 @@
 
 @font-face{
   font-family: 'Source Code Pro';
+  font-display: auto;
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
@@ -209,6 +218,7 @@
 
 @font-face{
   font-family: 'Source Code Pro';
+  font-display: auto;
   font-weight: 600;
   font-style: italic;
   font-stretch: normal;
@@ -220,6 +230,7 @@
 
 @font-face{
   font-family: 'Source Code Pro';
+  font-display: auto;
   font-weight: 700;
   font-style: normal;
   font-stretch: normal;
@@ -231,6 +242,7 @@
 
 @font-face{
   font-family: 'Source Code Pro';
+  font-display: auto;
   font-weight: 700;
   font-style: italic;
   font-stretch: normal;
@@ -242,6 +254,7 @@
 
 @font-face{
   font-family: 'Source Code Pro';
+  font-display: auto;
   font-weight: 900;
   font-style: normal;
   font-stretch: normal;
@@ -253,6 +266,7 @@
 
 @font-face{
   font-family: 'Source Code Pro';
+  font-display: auto;
   font-weight: 900;
   font-style: italic;
   font-stretch: normal;
