Add CF web analytic

--- a/themes/hello-friend-ng-fork/layouts/partials/javascript.html
+++ b/themes/hello-friend-ng-fork/layouts/partials/javascript.html
@@ -203,3 +203,5 @@
 		}).observe(document.body, {subtree: !0, childList: !0, attributes: !0, characterData: !0}), r()
 	}, !1);
 </script>
+
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "da776f0e92904e8b89ee1d9d3ecde3b4"}'></script><!-- End Cloudflare Web Analytics -->
