Fix error after upgrade Hugo

--- a/themes/basics-fork/layouts/partials/footer.html
+++ b/themes/basics-fork/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
-<!--    {{ if eq .URL "/"}}-->
+<!--    {{ if eq .Permalink "/"}}-->
 <!--        &nbsp;-->
 <!--    {{ else }}-->
 <!--        <img src="/drawkit-nature-man-monochrome.svg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;">-->
