--- a/themes/hello-friend-ng-fork/layouts/index.html
+++ b/themes/hello-friend-ng-fork/layouts/index.html
@@ -2,10 +2,10 @@
     <main class="posts">
         <div class="posts-info">
             <h1><a href="../posts">
-                {{- if in .URL "categories" -}}
-                    {{- if in .URL .Title -}}{{ i18n "postCategories" }} // {{ .Title }}{{- else -}}{{ i18n "postCategories" }}{{- end -}}
-                {{- else if (in .URL "tags") -}}
-                    {{- if in .URL .Title -}}{{ i18n "postTags" }} // {{ .Title }}{{- else -}}{{ i18n "postTags" }}{{- end -}}
+                {{- if in .Permalink "categories" -}}
+                    {{- if in .Permalink .Title -}}{{ i18n "postCategories" }} // {{ .Title }}{{- else -}}{{ i18n "postCategories" }}{{- end -}}
+                {{- else if (in .Permalink "tags") -}}
+                    {{- if in .Permalink .Title -}}{{ i18n "postTags" }} // {{ .Title }}{{- else -}}{{ i18n "postTags" }}{{- end -}}
                 {{- else -}}
                     {{ i18n "postTitle" }}
                 {{- end -}}
@@ -13,21 +13,21 @@
             <div class="posts-type">
                 <div class="posts-type__inner">
                     <div class="posts-type__content">
-                        {{- if in .URL "posts" -}}
-                            <span><a href="{{- if in .URL .Title -}}../../categories/{{- else -}}../categories/{{- end -}}">{{ i18n "postCategories" }}</a></span>
-                            <span><a href="{{- if in .URL .Title -}}../../tags/{{- else -}}../tags/{{- end -}}">{{ i18n "postTags" }}</a></span>
+                        {{- if in .Permalink "posts" -}}
+                            <span><a href="{{- if in .Permalink .Title -}}../../categories/{{- else -}}../categories/{{- end -}}">{{ i18n "postCategories" }}</a></span>
+                            <span><a href="{{- if in .Permalink .Title -}}../../tags/{{- else -}}../tags/{{- end -}}">{{ i18n "postTags" }}</a></span>
                         {{- else -}}
-                            {{- if not (in .URL "categories") -}}
-                                <span><a href="{{- if in .URL .Title -}}../../categories/{{- else -}}../categories/{{- end -}}">{{ i18n "postCategories" }}</a></span>
-                                {{- if in .URL .Title -}}
-                                    <span><a href="{{- if in .URL .Title -}}../../tags/{{- else -}}../tags/{{- end -}}">{{ i18n "postTags" }}</a></span>
+                            {{- if not (in .Permalink "categories") -}}
+                                <span><a href="{{- if in .Permalink .Title -}}../../categories/{{- else -}}../categories/{{- end -}}">{{ i18n "postCategories" }}</a></span>
+                                {{- if in .Permalink .Title -}}
+                                    <span><a href="{{- if in .Permalink .Title -}}../../tags/{{- else -}}../tags/{{- end -}}">{{ i18n "postTags" }}</a></span>
                                 {{- end -}}
                             {{- end -}}
-                            {{- if not (in .URL "tags")  -}}
-                                {{- if in .URL .Title -}}
-                                    <span><a href="{{- if in .URL .Title -}}../../categories/{{- else -}}../categories/{{- end -}}">{{ i18n "postCategories" }}</a></span>
+                            {{- if not (in .Permalink "tags")  -}}
+                                {{- if in .Permalink .Title -}}
+                                    <span><a href="{{- if in .Permalink .Title -}}../../categories/{{- else -}}../categories/{{- end -}}">{{ i18n "postCategories" }}</a></span>
                                 {{- end -}}
-                                <span><a href="{{- if in .URL .Title -}}../../tags/{{- else -}}../tags/{{- end -}}">{{ i18n "postTags" }}</a></span>
+                                <span><a href="{{- if in .Permalink .Title -}}../../tags/{{- else -}}../tags/{{- end -}}">{{ i18n "postTags" }}</a></span>
                             {{- end -}}
                         {{- end -}}
                         {{- range .Translations -}}
